--- a/Nginx/new nginx.conf
+++ b/Nginx/new nginx.conf
@@ -60,7 +60,7 @@ http {
             add_header 'Access-Control-Allow-Credentials' 'true';
         }
 
-        location /redisui {
+        location /redisui/ {
             rewrite ^/redisui/(.*)$ /$1 break;
             proxy_pass http://127.0.0.1:8081;
             # proxy_set_header Origin ;
@@ -91,7 +91,7 @@ http {
 
 
 
-## certboot
+# certboot
     listen 443 ssl; # managed by Certbot
     ssl_certificate /etc/letsencrypt/live/go.qrtap.in/fullchain.pem; # managed by Certbot
     ssl_certificate_key /etc/letsencrypt/live/go.qrtap.in/privkey.pem; # managed by Certbot
