--- a/Nginx/decstonginxdev.conf
+++ b/Nginx/decstonginxdev.conf
@@ -1,10 +1,3 @@
-cd /etc
-ls
-cd nginx
-ls
-
-
-
 user nginx;
 worker_processes auto;
 error_log /var/log/nginx/error.log notice;
@@ -37,15 +30,15 @@ http {
     include /etc/nginx/conf.d/*.conf;
 
     server {
-        server_name  go.qrtap.in;
+        server_name  devapi.decsto.com;
 
-        location / {
-            proxy_pass http://127.0.0.1:3000;
-            # proxy_set_header Origin ;
+        location /main {
+            proxy_pass http://127.0.0.1:5000;
+            proxy_set_header Origin https://dev.decsto.com;
     
             # Handle preflight requests
             if ($request_method = OPTIONS) {
-                # add_header 'Access-Control-Allow-Origin' 'https://dash.decsto.com';
+                add_header 'Access-Control-Allow-Origin' 'https://dev.decsto.com';
                 add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
                 add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type, X-Requested-With';
                 add_header 'Access-Control-Allow-Credentials' 'true';
@@ -61,18 +54,19 @@ http {
             proxy_hide_header Access-Control-Allow-Headers;
     
             # Add CORS headers
-            # add_header 'Access-Control-Allow-Origin' 'https://dash.decsto.com';
+            add_header 'Access-Control-Allow-Origin' 'https://dev.decsto.com';
             add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
             add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type, X-Requested-With';
             add_header 'Access-Control-Allow-Credentials' 'true';
         }
-        location /redisui {
-            proxy_pass http://127.0.0.1:6739;
-            # proxy_set_header Origin ;
+    
+        location /storj {
+            proxy_pass http://127.0.0.1:6000;
+            proxy_set_header Origin https://dev.decsto.com;
     
             # Handle preflight requests
             if ($request_method = OPTIONS) {
-                # add_header 'Access-Control-Allow-Origin' 'https://dash.decsto.com';
+                add_header 'Access-Control-Allow-Origin' 'https://dev.decsto.com';
                 add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
                 add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type, X-Requested-With';
                 add_header 'Access-Control-Allow-Credentials' 'true';
@@ -88,19 +82,44 @@ http {
             proxy_hide_header Access-Control-Allow-Headers;
     
             # Add CORS headers
-            # add_header 'Access-Control-Allow-Origin' 'https://dash.decsto.com';
+            add_header 'Access-Control-Allow-Origin' 'https://dev.decsto.com';
             add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
             add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type, X-Requested-With';
             add_header 'Access-Control-Allow-Credentials' 'true';
         }
-    }
 
-    server {
 
-        listen       80;
-        listen       [::]:80;
-        server_name  go.qrtap.in;
-        return 404; # managed by Certbot
-    }
+
+
+    
+
 
 }
+
+
+server {
+    if ($host = devapi.decsto.com) {
+        return 301 https://$host$request_uri;
+    } # managed by Certbot
+
+
+    listen       80;
+    listen       [::]:80;
+    server_name  devapi.decsto.com;
+    return 404; # managed by Certbot
+}
+
+
+
+    server {
+    if ($host = devapi.decsto.com) {
+        return 301 https://$host$request_uri;
+    } # managed by Certbot
+
+
+        server_name  devapi.decsto.com;
+    listen 80;
+    return 404; # managed by Certbot
+
+
+}}
